# greenproof

./: Cargo.toml  README.md  greenverify-ai-deck.html
.cargo/: config.toml
contracts/carbon-credit/: Cargo.toml  lib.rs
contracts/marketplace/: lib.rs
contracts/verifier-registry/: lib.rs
