###############################################################################
# GreenVerify AI — Cargo Workspace
#
# Root workspace manifest for the GreenVerify AI platform.
# All ink! v5 smart contracts live under contracts/.
###############################################################################

[workspace]
members = [
    "contracts/marketplace",
    "contracts/verifier-registry",
]
# carbon-credit is built on OpenBrush 3.x (ink! 4 / nightly Rust) and cannot
# compile on stable in this ink! 5 workspace. It is excluded from the default
# build. See README for details.
exclude = [
    "contracts/carbon-credit",
]
resolver = "2"

[workspace.package]
edition   = "2021"
authors   = ["GreenVerify AI Team"]
license   = "MIT"
repository = "https://github.com/greenverify-ai/greenverify-contracts"

# Shared dependency versions across all contracts.
[workspace.dependencies]
ink           = { version = "5.0.0", default-features = false }
scale         = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info    = { version = "2.10", default-features = false, features = ["derive"] }
openbrush     = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "3.1.0", default-features = false }

# Dev / E2E testing (optional).
ink_e2e       = { version = "5.0.0" }
