###############################################################################
# GreenVerify AI — Carbon Credit NFT
#
# An ERC-721-equivalent (PSP34) non-fungible token where each token
# represents one tonne of verified CO₂ offset.
#
# PSP34 + Enumerable is implemented natively (no OpenBrush) so this contract
# builds on stable Rust with ink! 5.
#
# Build:  cargo contract build
# Test:   cargo test
###############################################################################

[package]
name        = "carbon-credit"
version     = "0.1.0"
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
ink        = { workspace = true }
scale      = { workspace = true }
scale-info = { workspace = true, optional = true }
# PSP34 (ink!'s ERC-721) is implemented natively in lib.rs — no external
# framework — so this contract builds on stable Rust with ink! 5.

[dev-dependencies]
ink_e2e = { workspace = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

[lib]
path = "lib.rs"
